js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.0.kt
class MyClass {
    companion object {
        konst stringProperty = "0"
    }
}
